k8s/api.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api
#   namespace: todo-lab
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: api
#   template:
#     metadata:
#       labels:
#         app: api
#     spec:
#       containers:
#         - name: api
#           image: arunkumarcarch/todo_api_2:v1.0.0
#           imagePullPolicy: IfNotPresent
#           ports:
#             - containerPort: 8000
#           envFrom:
#             - configMapRef:
#                 name: api-config
#             - secretRef:
#                 name: db-secret
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: todo-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: arunkumarcarch/todo_api_image:d6d9738327691bc9c5412b2d7e2a19243e548aca
          ports:
            - containerPort: 8000
