k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: todo-lab
spec:
  type: NodePort
  selector:
    app: web
  ports:
    # - port: 80
    #   targetPort: 80
    - port: 3000
      targetPort: 3000
      nodePort: 32000
